feat: add MainFx.java & updated build.gradle.kts